fix: double scroll bar of contacts list

--- a/src/app/contacts/contacts.component.less
+++ b/src/app/contacts/contacts.component.less
@@ -7,7 +7,6 @@
 .contacts-list-container {
   width: 270px;
   position: relative;
-  overflow: scroll;
 }
 
 .contact-details-container {
